# cryptrivia-api

./: .env  .gitignore  .vercelignore  Cargo.toml  vercel.json
api/shamir/: generate.rs  reconstruct.rs
